--- a/_layouts/about-me.html
+++ b/_layouts/about-me.html
@@ -10,8 +10,7 @@ layout: default
       </a>
       <h1 class="profile-name">{{ site.title }}</h1>
       <p class="profile-bio">{{ site.subtitle }}</p>
-      {% if site.github_username %} {%- include github_follow_button.html -%} {%
-      endif %}
+      {% if site.github_username %} {% endif %}
 
       <p class="profile-links">
         {% if site.github_username %}
