--- a/_layouts/about-me.html
+++ b/_layouts/about-me.html
@@ -73,20 +73,13 @@ layout: default
     <div class="card">
       <h1 class="card-title">Work Experience</h1>
       <br />
-      {% for exp in site.author_work_experiences %} {% if exp.visibility == true
-      %}
+      {% for exp in site.author_work_experiences %} {% if exp.visibility == true %}
       <div class="row">
-        <div class="col-md-2">
-          <img
-            src="{{site.url}}{{site.baseurl}}/assets/img/{{ exp.company_logo }}"
-            class="company-logo"
-          />
-        </div>
         <div class="col-md-6">
-          <h4 class="experience-title">{{ exp.designation }}</h4>
-          <h6 class="experience-info">{{ exp.company_name}}</h6>
+          <h4 class="experience-title">{{ exp.project_name }}</h4>
+          <h6 class="experience-info"><strong>기간:</strong> {{ exp.period }}</h6>
+          <h6 class="experience-info">{{ exp.designation }}</h6>
           <p class="experience-desc">{{ exp.description }}</p>
-          <p><a href="{{exp.company_url}}">{{ exp.company_url}}</a></p>
         </div>
       </div>
       {% endif %} {% endfor %}
