--- a/_layouts/about-me.html
+++ b/_layouts/about-me.html
@@ -42,8 +42,8 @@ layout: default
       <h1 class="card-title">About</h1>
       <p>{{ site.author_bio }}</p>
     </div>
-    {% endif %} {% if site.show_author_project_details == true %}
-    <div id="author_projects" class="card">
+      {% endif %}{% if site.show_author_project_details == true %}
+      <div id="author_projects" class="card">
       <h1 class="card-title">Projects</h1>
       <br />
       {% for project in site.author_project_details %} {% if project.visibility
@@ -57,12 +57,12 @@ layout: default
         </div>
         <div class="col-md-4 center">
           <h4 class="experience-title">{{ project.project_title }}</h4>
-          <h6 class="experience-info">{{ project.project_info}}</h6>
-          <p class="experience-desc">{{ project.project_description }}</p>
+          <h6 class="experience-info"><strong>기간:</strong> {{ project.project_period }}</h6>
+          <h6 class="experience-info">{{ project.designation }}</h6>
+          <p class="experience-desc">{{ project.description }}</p>
           <p>
             <a class="project-link" href="{{project.project_url}}"
-              >{{ project.project_url}}</a
-            >
+              >{{ project.project_url}}</a>
           </p>
         </div>
       </div>
@@ -76,9 +76,8 @@ layout: default
       {% for exp in site.author_work_experiences %} {% if exp.visibility == true %}
       <div class="row">
         <div class="col-md-6">
-          <h4 class="experience-title">{{ exp.project_name }}</h4>
+          <h4 class="experience-title">{{ exp.company_name }}</h4>
           <h6 class="experience-info"><strong>기간:</strong> {{ exp.period }}</h6>
-          <h6 class="experience-info">{{ exp.designation }}</h6>
           <p class="experience-desc">{{ exp.description }}</p>
         </div>
       </div>
