게시물에 관한 틀 수정

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,5 +12,5 @@ layout: full-width
     <!-- hero section-->
     {%- include hero.html -%}
     <div class="col-lg-8 offset-md-2">
-      {%- include recent_articles.html -%}
+      {%- include recent_posts.html -%}
     </div>
