--- a/_includes/blog_post_article.html
+++ b/_includes/blog_post_article.html
@@ -1,12 +1,8 @@
 <article class="card" itemscope itemtype="http://schema.org/BlogPosting">
   <div class="card-header">
     <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
-    <h4 class="post-meta">{{ page.summary }}</h4>
     <p class="post-summary">
-      Posted by : {% if page.author %}
-      <span itemprop="author" itemscope itemtype="http://schema.org/Person">
-        <span itemprop="name"><a href="{{site.url}}{{site.baseurl}}/blog/authors/{{page.author}}">{{ page.author }}</a></span> </span
-      >{% endif %} on
+      Posted on
       <time datetime="{{ page.date }}" itemprop="datePublished"
         >{{ page.date | date: "%b %-d, %Y" }}</time
       >
@@ -36,7 +32,6 @@
     <br />
     {{ content }}
     <br />
-    {%- include share_page.html -%}
     <!-- Author box -->
     {% assign author = site.data.authors[page.author] %}
       {% if author %}
