--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -8,15 +8,11 @@ layout: default
                   <div class="row">
                       {% for post in paginator.posts %}
                       <div class="card blog-post">
-                          <img class="card-img-top" src="{{site.url}}{{site.baseurl}}{{ post.thumbnail }}" alt="{{ post.title }}">
-                          <div class="card-body center">
-                              <!-- <img src="{{site.url}}{{site.baseurl}}/assets/img/{{ site.author_logo }}" class="author-profile-img"> -->
-                              <h4 class="card-title">{{ post.title }}</h4>
+                          <div class="card-body center blog-card">
+                              <a class="card-title" href="{{ post.url | prepend: site.baseurl }}" data-disqus-identifier="{{ post.url }}">{{ post.title }}</a>
 
                               <h6 class="card-subtitle mb-2 text-muted">{{ post.date | date: "%b %-d, %Y" }}</h6>
-                              <p class="card-text">{{ post.summary }} </p>
 
-                              <a href="{{ post.url | prepend: site.baseurl }}" data-disqus-identifier="{{ post.url }}" class="btn btn-dark btn-lg">Read</a>
                               <span class="disqus-comment-count" data-disqus-identifier="{{ post.url }}"></span>
 
                           </div>
