--- a/_sass/devlopr.scss
+++ b/_sass/devlopr.scss
@@ -228,6 +228,11 @@ header {
     background-color: var(--card-background-color) !important;
 }
 
+.card .blog-post{
+    margin: 20px !important;
+    background-color: var(--card-background-color) !important;
+}
+
 #topNav{
     padding-left: 15%;
     padding-right: 15%;
@@ -272,8 +277,17 @@ header {
 .author_bio{
     margin-top:5px;
 }
-.card-title {
-    margin-bottom: .75rem !important;
+.card-title{
+  margin-bottom: .75rem !important;
+}
+.blog-card{
+  padding: 0 !important;
+}
+.blog-card .card-title{
+  font-size: 1.5rem;
+  font-weight: 500;
+  color: black !important;
+  line-height: 50px;
 }
 
 /* Search Overlay */
@@ -732,9 +746,10 @@ header {
 .blog-post {
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
-    width: 45%;
+    width: 100%;
     height: auto;
     margin: 20px auto !important;
+    margin-bottom: 0px !important;
 }
 
 .blog-post:hover {
