--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -25,8 +25,8 @@
 
   <p class="lead" id="typewriteText"></p>
   <span>
-    {%- include github_star_button.html -%}
-    {%- include github_fork_button.html -%}
+    <!--{%- include github_star_button.html -%}-->
+    <!--{%- include github_fork_button.html -%}-->
   </span>
   <!-- uncomment/modify buttons as you want-->
   <div class="jumbotron-btns">
