Further converted site to mine

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -29,7 +29,7 @@
     <!--{%- include github_fork_button.html -%}-->
   </span>
   <!-- uncomment/modify buttons as you want-->
-  <div class="jumbotron-btns">
+ <!----> <div class="jumbotron-btns">
     <a href="{{site.url}}{{site.baseurl}}/get-started">
       <button class="btn btn-md btn-warning"> <strong>Get Started</strong> </button>
     </a>
