--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,6 +7,9 @@ comments: true
   <div class="col-lg-10">
     {%- include blog_post_article.html -%}
      {%- include blog_post_comments.html-%}
+
+     <script async src="https://talk.hyvor.com/embed/embed.js" type="module"></script>
+<hyvor-talk-comments website-id="9321" page-id=""></hyvor-talk-comments>
   </div>
 </div>
 <div class="row">
