update links, announce construction, updating html

--- a/_includes/author_skills.html
+++ b/_includes/author_skills.html
@@ -1,2 +1,2 @@
-<p> HTML , CSS , Javascript , PHP, Python, C</p>
-<p> Adobe XD, Inkscape, Git, Linux </p>
+<p> C++, Game Engine Architecture, Unity, Dear-Imgui </p>
+<p> Photoshop, Illustrator, 3dsMax, Maya, Premiere </p> 
