trying something to see if formspree extra fields go away

--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -9,7 +9,7 @@ layout: default
                 <h1 class="card-title"> Contact us </h1>
                 <!-- Replace with contact-getform or contact-formspree -->
                     <!--{%- include contact-getform.html -%}-->
-                    {%- include contact-formspree.html -%}
+                    <!--{%- include contact-formspree.html -%}-->
             </div>
         </div>
     </div>
