change fork button

--- a/_includes/github_fork_button.html
+++ b/_includes/github_fork_button.html
@@ -1,1 +1,3 @@
-<a class="github-button" href="https://github.com/sujaykundu777/devlopr-jekyll/fork" data-color-scheme="no-preference: dark; light: dark; dark: dark;" data-size="large" data-show-count="true" aria-label="Fork sujaykundu777/devlopr-jekyll on GitHub">Fork</a>
+<a class="github-button" href="https://github.com/Telloviz/telloviz.github.io/fork"
+    data-color-scheme="no-preference: dark; light: dark; dark: dark;" data-size="large" data-show-count="true"
+    aria-label="Fork Telloviz/telloviz.github.io on GitHub">Fork</a>
