--- a/_layouts/music.html
+++ b/_layouts/music.html
@@ -5,8 +5,9 @@ layout: default
 <hr />
 
 
-<h3>YouTube Responsive Embed</h3>
+<h2>"Epic Theme"</h2>
+<h3>from the student film "Eek!... ...Worm".</h3>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/bBpKMH3nBzE?rel=0&amp;controls=0&amp;showinfo=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://youtu.be/dke6jsHlGzA?rel=0&amp;controls=0&amp;showinfo=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <hr />
