working on disqus, testing locally

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -60,6 +60,7 @@ layout: default
 
     </div>
     {%- include blog_sidebar.html -%}
+    {%- include blog_post_comments.html -%}
 
  </div>
 </div>
