--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -6,7 +6,7 @@ layout: default
     <div class="row d-flex justify-content-center">
         <div class="col-10 m10">
             <div class="card">
-                <h1 class="card-title"> Contact us </h1>
+                <h1 class="card-title"> Contact me! </h1>
                 <!-- Replace with contact-getform or contact-formspree -->
                     {%- include contact-formspree.html -%} 
             </div>
