--- a/_includes/author_skills.html
+++ b/_includes/author_skills.html
@@ -1,2 +1,3 @@
-<p> C++, Game Engine Architecture, Unity, Dear-Imgui </p>
+<p> C++, Engine Architecture, Unity, Dear-Imgui </p>
 <p> Photoshop, Illustrator, 3dsMax, Maya, Premiere </p> 
+<p> Electric Guitar, Electric Bass, Fl Studio</p> 
