--- a/_includes/blog_post_article.html
+++ b/_includes/blog_post_article.html
@@ -43,11 +43,11 @@
       {% include author.html %}
     {% endif %}
   </div>
-  {%- if site.hyvor_talk_website_id -%}
+  <!-- {%- if site.hyvor_talk_website_id -%}
   <div class="comments">
     {%- include hyvor_comments.html -%}
    </div>
-    {%- endif -%}
+    {%- endif -%} -->
   <!-- Incomment incase you want to use Disqus -->
       <div id="disqus_thread"></div>
   
