--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -22,11 +22,13 @@
 
 <!-- home hero section -->
 <div class="jumbotron">
-  <img class="author-profile-img" src="{{site.url}}{{site.baseurl}}/assets/img/{{site.author_logo}}" />
+  <img class="author-profile-img"
+    src="{{site.url}}{{site.baseurl}}/assets/img/{{site.author_logo}}" />
   <p class="jumbotron-heading">Hi, I am {{site.author}} !</p>
 
   <p class="lead" id="typewriteText"></p>
- <!-- <span>
+
+  <!-- <span>
      {%- include github_star_button.html -%}
     {%- include github_fork_button.html -%} 
   </span> -->
@@ -40,4 +42,5 @@
       <button class="btn btn-md btn-default"> <strong>What's New</strong> </button>
     </a>
   </div> -->
+
 </div>
