--- a/_includes/blog_post_article.html
+++ b/_includes/blog_post_article.html
@@ -5,33 +5,22 @@
     <p class="post-summary">
       Posted by : {% if page.author %}
       <span itemprop="author" itemscope itemtype="http://schema.org/Person">
-        <span itemprop="name"><a href="{{site.url}}{{site.baseurl}}/blog/authors/{{page.author}}">{{ page.author }}</a></span> </span
-      >{% endif %} on
-      <time datetime="{{ page.date }}" itemprop="datePublished"
-        >{{ page.date | date: "%b %-d, %Y" }}</time
-      >
+        <span itemprop="name"><a href="{{site.url}}{{site.baseurl}}/blog/authors/{{page.author}}">{{ page.author
+            }}</a></span> </span>{% endif %} on
+      <time datetime="{{ page.date }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>
     </p>
-    <span
-      class="disqus-comment-count"
-      data-disqus-identifier="{{ page.url }}"
-    ></span>
+    <span class="disqus-comment-count" data-disqus-identifier="{{ page.url }}"></span>
     <div class="post-categories">
       {% if post %} {% assign categories = post.categories %} {% else %} {%
       assign categories = page.categories %} {% endif %} Category : {% for
       category in categories %}
-      <a href="{{site.baseurl}}/blog/categories/{{category|slugize}}"
-        >{{category}}</a
-      >
+      <a href="{{site.baseurl}}/blog/categories/{{category|slugize}}">{{category}}</a>
       {% unless forloop.last %}&nbsp;{% endunless %} {% endfor %}
     </div>
   </div>
 
   <div class="card-body" itemprop="articleBody">
-    <img
-      class="card-img-top"
-      src="{{site.url}}{{site.baseurl}}{{ page.thumbnail }}"
-      alt="{{ post.title }}"
-    />
+    <img class="card-img-top" src="{{site.url}}{{site.baseurl}}{{ page.thumbnail }}" alt="{{ post.title }}" />
     <br />
     <br />
     {{ content }}
@@ -39,8 +28,8 @@
     {%- include share_page.html -%}
     <!-- Author box -->
     {% assign author = site.data.authors[page.author] %}
-      {% if author %}
-      {% include author.html %}
+    {% if author %}
+    {% include author.html %}
     {% endif %}
   </div>
   <!-- {%- if site.hyvor_talk_website_id -%}
@@ -48,9 +37,10 @@
     {%- include hyvor_comments.html -%}
    </div>
     {%- endif -%} -->
+
   <!-- Incomment incase you want to use Disqus -->
-      <div id="disqus_thread"></div>
-  
+  <div id="disqus_thread"></div>
+
 
 
 </article>
