trying to fix some on screen artifacts

--- a/_includes/blog_newsletter.html
+++ b/_includes/blog_newsletter.html
@@ -9,5 +9,4 @@ real people should not fill this in and expect good things - do not remove this 
     </div><br />
     <div class="clear">
         <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe_footer" class="btn btn-lg btn-success">
-    </div>
-</div> -->
+    </div> </div> --> 
