--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,9 +10,9 @@ layout: compress
         <div class="main-container">
             {{ content }}
         </div>
-      <!--   <div class="col-lg-12" id="newsletter_footer">
-                {%- include blog_newsletter.html -%} 
-         </div> -->
+        
+      <!--   <div class="col-lg-12" id="newsletter_footer"> {%- include blog_newsletter.html -%} </div> -->  
+
         {%- include footer.html -%}
      <script>
             var options = {
