major updates trying to root out soem on screen artifacts

--- a/_includes/author_skills.html
+++ b/_includes/author_skills.html
@@ -1,3 +1,4 @@
-<p> C++, Engine Architecture, Unity, Dear-Imgui </p>
-<p> Photoshop, Illustrator, 3dsMax, Maya, Premiere </p> 
-<p> Electric Guitar, Electric Bass, Fl Studio</p> 
+<p> C++, Engine Architecture, Unity Engine, Dear-Imgui, SFML, C#, Python </p>
+<p> Photoshop, Illustrator, 3dsMax, Blender, Premiere </p> 
+<p> Electric Guitar, Electric Bass, Fl Studio, Music Theory</p> 
+<p> Character Development, Story Development </p> 
