--- a/_includes/blog_post_article.html
+++ b/_includes/blog_post_article.html
@@ -9,7 +9,7 @@
             }}</a></span> </span>{% endif %} on
       <time datetime="{{ page.date }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>
     </p>
-    <span class="disqus-comment-count" data-disqus-identifier="{{ page.url }}"></span>
+    <!-- <span class="disqus-comment-count" data-disqus-identifier="{{ page.url }}"></span> -->
     <div class="post-categories">
       {% if post %} {% assign categories = post.categories %} {% else %} {%
       assign categories = page.categories %} {% endif %} Category : {% for
@@ -32,13 +32,17 @@
     {% include author.html %}
     {% endif %}
   </div>
+
   <!-- {%- if site.hyvor_talk_website_id -%}
   <div class="comments">
     {%- include hyvor_comments.html -%}
    </div>
-    {%- endif -%} -->
+    {%- endif -%}
+
+  -->
 
   <!-- Incomment incase you want to use Disqus -->
+
   <div id="disqus_thread"></div>
 
 
