--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@ layout: compress
             {{ content }}
         </div>
         
-      <!--   <div class="col-lg-12" id="newsletter_footer"> {%- include blog_newsletter.html -%} </div> -->  
+      <!-- <div class="col-lg-12" id="newsletter_footer"> {%- include blog_newsletter.html -%} </div> -->
 
         {%- include footer.html -%}
      <script>
@@ -25,8 +25,8 @@ layout: compress
             nanobar.go(100);
         </script>
 
-   <div hidden id="snipcart" data-api-key="Y2I1NTAyNWYtMTNkMy00ODg0LWE4NDItNTZhYzUxNzJkZTI5NjM3MDI4NTUzNzYyMjQ4NzU0"></div>
-   <script src="https://cdn.snipcart.com/themes/v3.0.0-beta.3/default/snipcart.js" defer></script>
+   <!-- <div hidden id="snipcart" data-api-key="Y2I1NTAyNWYtMTNkMy00ODg0LWE4NDItNTZhYzUxNzJkZTI5NjM3MDI4NTUzNzYyMjQ4NzU0"></div> -->
+   <!-- <script src="https://cdn.snipcart.com/themes/v3.0.0-beta.3/default/snipcart.js" defer></script> -->
    <script>
     if (window.netlifyIdentity) {
       window.netlifyIdentity.on("init", user => {
