--- a/_layouts/full-width.html
+++ b/_layouts/full-width.html
@@ -11,7 +11,7 @@ layout: compress
             {{ content }}
         </div>
          <div class="col-lg-12" id="newsletter_footer">
-               {%- include blog_newsletter.html -%}
+               <!-- {%- include blog_newsletter.html -%} -->
          </div>
         {%- include footer.html -%}
      <script>
