--- a/_layouts/about-me.html
+++ b/_layouts/about-me.html
@@ -10,8 +10,8 @@ layout: default
       </a>
       <h1 class="profile-name">{{ site.title }}</h1>
       <p class="profile-bio">{{ site.subtitle }}</p>
-      {% if site.github_username %} {%- include github_follow_button.html -%} {%
-      endif %}
+      {% if site.github_username %} {%- include github_follow_button.html -%} 
+      {% endif %}
 
       <p class="profile-links">
         {% if site.twitter_username %}
@@ -91,6 +91,8 @@ layout: default
       {% endif %} {% if site.author_website_url %}
       <h6><a href="{{ site.author_website_url }}"><i class="fas fa-link" class="social-link"></i> {{ site.author_website_url }}</a></h6>
       {% endif %}
+
+      [![wakatime](https://wakatime.com/badge/github/TelloViz/telloviz.github.io.svg)](https://wakatime.com/badge/github/TelloViz/telloviz.github.io)
     </div>
 
     <div class="card">
