I may have solved the --> problem!

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -19,7 +19,7 @@ layout: default
                               <p class="card-text">{{ post.summary }} </p>
 
                               <a href="{{ post.url | prepend: site.baseurl }}" data-disqus-identifier="{{ post.url }}" class="btn btn-dark btn-lg">Read</a>
-                              <!-- <span class="disqus-comment-count" data-disqus-identifier="{{ post.url }}"></span> -->
+                              <span class="disqus-comment-count" data-disqus-identifier="{{ post.url }}"></span>
 
                           </div>
                       </div>
