--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -31,16 +31,19 @@
   <!-- <span>
      {%- include github_star_button.html -%}
     {%- include github_fork_button.html -%} 
-  </span> -->
-  <!-- uncomment/modify buttons as you want-->
-  <!---->
-  <!-- <div class="jumbotron-btns">
+  </span> 
+  -->
+  <!-- uncomment/modify buttons as you want -->
+
+  <!-- 
+    <div class="jumbotron-btns">
     <a href="{{site.url}}{{site.baseurl}}/get-started">
       <button class="btn btn-md btn-warning"> <strong>Get Started</strong> </button>
     </a>
     <a id="olvy-target">
       <button class="btn btn-md btn-default"> <strong>What's New</strong> </button>
     </a>
-  </div> -->
+  </div> 
+  -->
 
 </div>
