--- a/_includes/blog_newsletter.html
+++ b/_includes/blog_newsletter.html
@@ -1,6 +1,6 @@
-<!-- Mailchimp Newletters -->
+<!-- Mailchimp Newletters
 
-<!-- 
+
     <form action="{{site.mailchimp_form_url}}" method="post" id="mc-embedded-subscribe-form"
     name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll_footer">
