--- a/_layouts/product.html
+++ b/_layouts/product.html
@@ -11,7 +11,7 @@ layout: default
                   fill="#9094FF" class="header__checkout-fill"></path>
               </svg>
               <span class="snipcart-items-count"></span>
-              <!-- <span class="snipcart-total-price"></span> -->
+              <span class="snipcart-total-price"></span>
             </button>
        </nav>
 
