--- a/_includes/github_fork_button.html
+++ b/_includes/github_fork_button.html
@@ -1,3 +1,3 @@
-<a class="github-button" href="https://github.com/Telloviz/telloviz.github.io/fork"
+<!-- <a class="github-button" href="https://github.com/Telloviz/telloviz.github.io/fork"
     data-color-scheme="no-preference: dark; light: dark; dark: dark;" data-size="large" data-show-count="true"
-    aria-label="Fork Telloviz/telloviz.github.io on GitHub">Fork</a>
+    aria-label="Fork Telloviz/telloviz.github.io on GitHub">Fork</a> -->
