trying some re arranging

--- a/_layouts/about-me.html
+++ b/_layouts/about-me.html
@@ -99,12 +99,30 @@ layout: default
       {%- include author_skills.html -%}
     </div>
 
-    {% if site.wakatime_username %}
+    {% if site.show_author_education_details == true %}
     <div class="card">
-      <h1>Coding Activity</h1>
-      {%- include coding_activity.html -%}
+      <h1 class="card-title">Education</h1>
+      <br />
+      {% for detail in site.author_education_details %} {% if detail.visibility
+      == true %}
+      <div class="row">
+        <div class="col-md-4">
+          <img
+            src="{{site.url}}{{site.baseurl}}/assets/img/{{ detail.college_logo}}"
+            class="company-logo"
+          />
+        </div>
+        <div class="col-md-8">
+          <h4 class="experience-title">{{detail.college_degree }}</h4>
+          <h6 class="experience-info">{{detail.college_name}}</h6>
+          <p class="experience-desc">{{detail.description}}</p>
+          <h6><a href="{{detail.college_url}}">{{ detail.college_url}}</a></h6>
+        </div>
+      </div>
+      {% endif %} {% endfor %}
     </div>
     {% endif %}
+    
   </div>
   <div class="col-lg-8">
     {% if site.author_bio %}
@@ -139,29 +157,22 @@ layout: default
       <br />
       {% endif %} {% endfor %}
     </div>
-    {% endif %} {% if site.show_author_education_details == true %}
+    {% endif %} 
+    
+        {% if site.wakatime_username %}
     <div class="card">
-      <h1 class="card-title">Education</h1>
-      <br />
-      {% for detail in site.author_education_details %} {% if detail.visibility
-      == true %}
-      <div class="row">
-        <div class="col-md-2">
-          <img
-            src="{{site.url}}{{site.baseurl}}/assets/img/{{ detail.college_logo}}"
-            class="company-logo"
-          />
-        </div>
-        <div class="col-md-6">
-          <h4 class="experience-title">{{detail.college_degree }}</h4>
-          <h6 class="experience-info">{{detail.college_name}}</h6>
-          <p class="experience-desc">{{detail.description}}</p>
-          <p><a href="{{detail.college_url}}">{{ detail.college_url}}</a></p>
-        </div>
-      </div>
-      {% endif %} {% endfor %}
+      <h1>Coding Activity</h1>
+      {%- include coding_activity.html -%}
     </div>
-    {% endif %}{% if site.show_author_work_experiences == true %}
+    {% endif %}
+    
+    
+    
+    
+    
+    
+    
+    {% if site.show_author_work_experiences == true %}
     <div class="card">
       <h1 class="card-title">Work Experience</h1>
       <br />
