adding ajax instead of fetch

--- a/_includes/ai.html
+++ b/_includes/ai.html
@@ -8,5 +8,8 @@
     <div id="result-container"></div>
 </div>
 
+
+<!-- Include jQuery library -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="{{ site.baseurl }}/assets/js/detection.js"></script>
 
