Update gallery entries

--- a/_includes/author_skills.html
+++ b/_includes/author_skills.html
@@ -1,4 +1,9 @@
-<p> C++, Engine Architecture, Unity Engine, Dear-Imgui, SFML, C#, Python </p>
+<p>
+    <a href="{{ site.baseurl }}/gallery/snake.html">C++</a>,
+    Engine Architecture, Unity Engine, Dear-Imgui,
+    <a href="{{ site.baseurl }}/gallerysnake.html">SFML</a>,
+    C#, Python
+</p>
 <p> Photoshop, Illustrator, 3dsMax, Blender, Premiere </p> 
 <p> Electric Guitar, Electric Bass, Fl Studio, Music Theory</p> 
-<p> Character Development, Story Development </p> 
+<p> Character Development, Story Development </p>
