update format of projects

--- a/_layouts/about-me.html
+++ b/_layouts/about-me.html
@@ -144,7 +144,7 @@ layout: default
           />
         </div>
         <div class="col-md-4 center">
-          <h4 class="experience-title">{{ project.project_title }}</h4>
+          <h4 class="experience-title"><a href="{{project.project_url}}">{{ project.project_title }}</a></h4>
           <h6 class="experience-info">{{ project.project_info}}</h6>
           <p class="experience-desc">{{ project.project_description }}</p>
           <p>
