update skills with links

--- a/_includes/author_skills.html
+++ b/_includes/author_skills.html
@@ -1,9 +1,9 @@
 <p>
     <a href="{{ site.baseurl }}/gallery/snake.html">C++</a>,
     Engine Architecture, Unity Engine, Dear-Imgui,
-    <a href="{{ site.baseurl }}/gallerysnake.html">SFML</a>,
+    <a href="{{ site.baseurl }}/gallery/snake">SFML</a>,
     C#, Python
 </p>
-<p> Photoshop, Illustrator, 3dsMax, Blender, Premiere </p> 
-<p> Electric Guitar, Electric Bass, Fl Studio, Music Theory</p> 
-<p> Character Development, Story Development </p>
+<p>Photoshop, <a href="{{ site.baseurl }}/gallery/bomber">Illustrator</a>, 3dsMax, Blender, Premiere,<a href="{{ site.baseurl }}/gallery/bomber">Traditional Drawing</a>  </p> 
+<p>Electric Guitar, Electric Bass, Fl Studio, Music Theory</p> 
+<p><a href="{{ site.baseurl }}/gallery/bomber">Character Development</a>, Story Development </p>
