new blurb on skills

--- a/_includes/author_skills.html
+++ b/_includes/author_skills.html
@@ -1,3 +1,5 @@
+
+<h6>Click a skill to see an associated project!</h6> 
 <p>
     <a href="{{ site.baseurl }}/gallery/snake.html">C++</a>,
     Engine Architecture, Unity Engine, Dear-Imgui,
