all goo don local test for game, update readme

--- a/_layouts/unity.html
+++ b/_layouts/unity.html
@@ -1,14 +1,48 @@
 ---
-layout: default
+layout: page
 ---
 
 <!-- _layouts/unity.html -->
 <!DOCTYPE html>
 <html>
+
 <head>
   <!-- Any necessary meta tags, styles, or scripts -->
 </head>
+
 <body>
+  <h4>Tello-Vision Presents:</h4>
+  <h1>Server Surfer</h1>
+  <h5>Coding, Art, & Music by Joshua "Tello-" Lollis</h5>
   {{ content }} <!-- This is where your Unity WebGL content will be inserted -->
+  <h4>Controls:</h4>
+  <p>Activate Controls: [Click Game Area]</p>
+  <p>Change Stance: [LEFT], [RIGHT]</p>
+  <p>Lift Board: [UP], [SPACE]</p>
+  <p>Halt Board: [DOWN]</p>
+  <hr>
+  <h4>Synopsis:</h4>
+  <p>Surf the server-verse as the Server Surfer! A good surfer should alter their stance, allowing for different ways
+    to
+    carve the waves!</p>
+  <hr>
+  <h4>How to win:</h4>
+  <p>Have too much fun!</p>
+  <p>The game will determine when you've had too much fun. Once the win state is detected, the game
+    will inform you. So keep trying for the ultimate victory, fun!</p>
+  <hr>
+  <h4>Notes:</h4>
+  <p>This is a prototype. My goal with this prototype was to create a few new mechanics for a flappy-like. The stance
+    position on the board affects the surfer's lift-behavior. In development mode (Unity Editor), designers can hotswap
+    enemy flight patterns at the drop of a pattern object. This game prototype utilizes concepts like dependency
+    injection, custom events/triggers, color lerping, etc. This build does not factor in collisions between obstacles
+    and the player. The main showcase of this build is the surfer control mechanics, and the enemy movement dependency
+    injection
+    aspect. The art and music is by myself. The music uses samples form other sources, but is soley used here for
+    education purposes. Nothing from this project, or on this website is for sale, ever.
+    <hr>
+    Updates to this page coming soon.
+  </p>
 </body>
+
 </html>
