--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -5,6 +5,6 @@ layout: page
 <html>
   <body>
     <h1>CV</h1>
-    <a href="../assets/pdf/joshua_lollis_game_dev_resume.pdf"></a>
+    <p><a href="../assets/pdf/joshua_lollis_game_dev_resume.pdf"></a></p>
   </body>
 </html>
