--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -2,9 +2,19 @@
 layout: page
 ---
 
+<!DOCTYPE html>
 <html>
-  <body>
-    <h1>CV</h1>
-    <p><a href="../assets/pdf/joshua_lollis_game_dev_resume.pdf"></a></p>
-  </body>
+
+<head>
+    <title>PDF in HTML</title>
+</head>
+
+<body>
+    <center>
+        <object data="../assets/pdf/joshua_lollis_game_dev_resume.pdf" width="800"
+            height="500">
+        </object>
+    </center>
+</body>
+
 </html>
